--- a/index.html
+++ b/index.html
@@ -1388,8 +1388,8 @@
    </div>     
 </div>
     
-
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  	<script src="JS/index.js"></script>
+  
+  	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  	<script src="js/index.js"></script>
 </body>
 </html>
