--- a/index.html
+++ b/index.html
@@ -769,23 +769,23 @@
           <div class="channel-category">
                <ul class="cate-list">
                    <li class="cate-item">
-                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/"><span></span>
+                     <div class="cate-name">簡報</div>
                    </a>
                    </li>
                    <li class="cate-item">
-                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/"><span></span>
+                       <div class="cate-name">口語表達</div>
                    </a>
                    </li>
                    <li class="cate-item">
-                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/"><span></span>
+                       <div class="cate-name">團隊合作</div>
                    </a>
                    </li>
                    <li class="cate-item">
-                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                   <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/"><span></span>
+                       <div class="cate-name">專業能力</div>
                    </a>
                    </li>
                    
