我現在做了兩個版本的主題圖示，你看看你希望哪一種。 然後不管是哪一種都麻煩把 svg 黨傳給我。 我所有在 git  的 svg 黨 開起來都是白白一片

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                <ul class="cate-list">
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" alt="width=20px">
                    </a>
                    </li>
                    <li class="cate-item">
