--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                <ul class="cate-list">
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="img/finance1.svg" alt="width=20px">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
