--- a/index.html
+++ b/index.html
@@ -263,32 +263,32 @@
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                      <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="http://placehold.it/40x40" alt="">
+                       <img src="img/finance1.svg" width=60>
                    </a>
                    </li>
                   
