--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="nv-link">
                    <ul>
                        <li><a href="#"><span>金融業</span></a></li>
-                       <li><a href="#"><span>傳播業</span></a></li>
+                       <li><a href="#"><span>媒體業</span></a></li>
                        <li><a href="#"><span>顧問業</span></a></li>
                        <li><a href="#"><span>科技業</span></a></li>
                        <li><a href="#"><span>公關廣告</span></a></li>
