add view and comment icon and category js

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                <ul class="cate-list">
                    <li class="cate-item">
                    <a href="http://www.stockfeel.com.tw/category/cloud-knowledge/">
-                       <img src="img/finance.svg" width=60>
+                       <img src="img/finance.svg" width="60" >
                    </a>
                    </li>
                    <li class="cate-item">
